# SMAM

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  compile.sh  conanfile.py  conanfile.txt  requirements.txt  run.sh
src/: CMakeLists.txt  argparser.hpp  database.cpp  database.h  download.cpp  download.h  downloader.cpp  downloader.h  installer.cpp  installer.h  main.cpp  opts.cpp  opts.h  opts.hpp  plan.cpp  plan.h  smfs.cpp  smfs.h  smfs.hpp  utils.cpp  utils.h  version.hpp  version.hpp.in
src/commands/: CMakeLists.txt  common.cpp  common.h  info.cpp  install.cpp  remove.cpp  search.cpp
src/commands/helpers/: CMakeLists.txt  installer.cpp  installer.h  report.cpp  report.h
src/data/: CMakeLists.txt  addon.cpp  addon.h  file.cpp  file.h
src/net/: CMakeLists.txt  database.cpp  database.h  download.cpp  download.h
src/operations/: CMakeLists.txt  addon.cpp  addon.h  common.cpp  common.h  common.hpp  core.hpp  installer.cpp  installer.h  remover.cpp  remover.h
src/scrapers/: CMakeLists.txt  amscraper.cpp  amscraper.h  ghscraper.cpp  ghscraper.h  ltscraper.cpp  ltscraper.h  scraper.cpp  scraper.h  scraper.hpp
src/smfs/: CMakeLists.txt  addon.cpp  addon.h  file.cpp  file.h  path.cpp  path.h
src/utils/: CMakeLists.txt  amnode.cpp  amnode.h  archive.cpp  archive.h  codes.hpp  common.cpp  common.h  error.hpp  file.hpp  logger.cpp  logger.h  misc.cpp  misc.h  options.cpp  options.h  path.cpp  path.h  printer.cpp  printer.h  report.cpp  report.h  smfs.cpp  smfs.h  version.cpp  version.h
test/: CMakeLists.txt  addontest.cpp  alltest.sh  amscrapertest.cpp  cmdalltest.sh  cmdinstalltest.sh  cmdremovetest.sh  curlmock.cpp  curlmock.h  curlmocktest.cpp  databasemock.cpp  databasemock.h  databasetest.cpp  downloadermock.cpp  downloadermock.h  downloadertest.cpp  downloadtest.cpp  errorcodetest.sh  filetest.cpp  ghscrapertest.cpp  installertest.cpp  ltscrapertest.cpp  optstest.cpp  pathtest.cpp  plantest.cpp  scrapertest.cpp  scrapertest.hpp  smfstest.cpp  utilstest.cpp
test/dbdata/: connect.json  dynamic_motd.json  thriller.json  updater.json
test/integration/: common.py  conftest.py  data.py  smamdb.py  test_dependency.py  test_exitcodes.py  test_install.py  test_install_dep.py  test_remove.py  test_remove_dep.py
test/integration/websites/: dynamic_motd.html  rtd.html  steamtools.html
test/mock/: curl.cpp  curl.h
test/mock/data/: thirdparty_link.json
test/mock/data/database/: accelerator.json  afk_manager.json  b_wants_a.json  badaddon_no_author.json  badaddon_no_description.json  badaddon_no_id.json  badfileaddon.json  badthriller.json  connect.json  funcommandsx.json  rtd.json  sharedthriller.json  steamtools.json  tf2items.json  thriller.json  updater.json  wants_circular.json  wants_multiple.json  wants_rtd.json  wants_self.json
test/mockdata/: accelerator.txt  advancedinfiniteammo.txt  afk_manager.txt  connect.txt  funcommandsx.txt  tf2attributes.txt  thirdparty_link.json
test/mockdata/database/: a_wants_b.json  accelerator.json  advancedinfiniteammo.json  afk_manager.json  bad_and_wants_rtd.json  badaddon.json  badthriller.json  connect.json  dynamic_motd.json  funcommandsx.json  pluginpack.json  pluginpack_circular.json  pluginpack_hierarchy.json  rtd.json  sharedthriller.json  steamtools.json  tf2attributes.json  tf2items.json  thriller.json  updater.json  wants_badaddon.json
test/unit/: addontest.cpp  amscrapertest.cpp  curlmocktest.cpp  databasetest.cpp  downloadtest.cpp  filetest.cpp  ghscrapertest.cpp  ltscrapertest.cpp  optstest.cpp  pathtest.cpp  scrapertest.cpp  scrapertest.hpp  utilstest.cpp
test/unit/data/: addon.cpp  file.cpp
test/unit/mock/: curl.cpp
test/unit/net/: database.cpp  download.cpp
test/unit/operations/: addon.cpp  common.cpp  core.cpp  installer.cpp
test/unit/scrapers/: amscraper.cpp  common.hpp  ghscraper.cpp  ltscraper.cpp
test/unit/utils/: common.cpp  options.cpp  path.cpp
