cmake_minimum_required(VERSION 3.12 FATAL_ERROR)

message("Building with CMake version " ${CMAKE_VERSION})

project(SMAM)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(TARGETS)

include_directories("./src" "./test" ${CONAN_INCLUDE_DIRS})

execute_process(COMMAND git rev-list --count HEAD
  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
  OUTPUT_VARIABLE GIT_REVISION
  OUTPUT_STRIP_TRAILING_WHITESPACE)
set(PROJECT_AGENT "SourceMod Addon Manager")

set(VERSION_MAJOR 0)
set(VERSION_MINOR 0)
set(VERSION_PATCH 2a)
set(VERSION_REVISION ${GIT_REVISION})
set(AGENT ${PROJECT_AGENT})

if(DEFINED ISOLATED)
  add_definitions(-DISOLATED)
endif()

configure_file("${PROJECT_SOURCE_DIR}/src/version.hpp.in" "${PROJECT_SOURCE_DIR}/src/version.hpp" @ONLY)

add_subdirectory(src)

if(CMAKE_BUILD_TYPE STREQUAL Debug)
  add_subdirectory(test)
endif()
